Container padding fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ a:link {
   }
 
   .nav-item {
-    padding: 20px 10px 20px 10px;
+    padding: 20px 15px;
   } 
 
   .gallery-item .text {
@@ -555,7 +555,7 @@ a:link {
   .container {
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(20vw, auto);
-    margin: 0px 10px 20px 10px;
+    padding: 0px 15px 20px 15px;
   }
 
   .w-1,
